Fix alignment issues (#712)

--- a/frontend/src/features/help/components/HelpSubmitBox.scss
+++ b/frontend/src/features/help/components/HelpSubmitBox.scss
@@ -3,7 +3,7 @@
     display: flex;
     label {
       padding-right: 1rem;
-      width: 20%;
+      width: 40%;
     }
     span {
       width: 80%;
